--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     -->
     <title>Taxi</title>
   </head>
-  <body ">
+  <body >
     
     <div id="root" style="overflow-x: hidden;"></div>
     
